Merged HFC and ForwardChainer